# slack-export-indexer

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  slack-export-indexer.cabal  stack.yaml
app/: Main.hs
src/: Slack.hs
src/Slack/Export/: Indexer.hs  Opts.hs  Types.hs
