name:                slack-export-indexer
version:             0.1.0.0
synopsis:            Parses Slack export archives into an ElasticSearch index for exploring with Kibana
description:         Please see README.md
homepage:            https://github.com/martinbaillie/slack-export-indexer
license:             BSD3
license-file:        LICENSE
author:              Martin Baillie
maintainer:          martin.t.baillie@gmail.com
copyright:           2016 Martin Baillie
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Slack
  build-depends:       base
                     , aeson
                     , text
                     , filepath
                     , bytestring
  default-language:    Haskell2010

executable slack-export-indexer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slack-export-indexer
                     , aeson
                     , aeson-pretty
                     , bloodhound
                     , http-client
                     , transformers
                     , conduit
                     , conduit-combinators
                     , stm-conduit
                     , resourcet
                     , SHA
                     , retry
                     , vector
                     , text
                     , exceptions
                     , directory

                     , zip-archive
                     , temporary
                     , bytestring

  default-language:    Haskell2010

test-suite slack-export-indexer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slack-export-indexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martinbaillie/slack-export-indexer
